solution/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-info-service
  namespace: devops-lab9
  labels:
    app: devops-info-service
    app.kubernetes.io/name: devops-info-service
    app.kubernetes.io/part-of: devops-lab9
spec:
  replicas: 3
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: devops-info-service
  template:
    metadata:
      labels:
        app: devops-info-service
        app.kubernetes.io/name: devops-info-service
        app.kubernetes.io/part-of: devops-lab9
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 122
        runAsGroup: 122
        fsGroup: 122
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: devops-info-service
          image: xrixis/devops-i-lobazov:0.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
