solution/k8s/rust-service.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-info-service-rust
  namespace: devops-lab9
  labels:
    app: devops-info-service-rust
    app.kubernetes.io/name: devops-info-service-rust
    app.kubernetes.io/part-of: devops-lab9
spec:
  type: ClusterIP
  selector:
    app: devops-info-service-rust
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
