solution/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-info-service
  namespace: devops-lab9
  labels:
    app: devops-info-service
    app.kubernetes.io/name: devops-info-service
    app.kubernetes.io/part-of: devops-lab9
spec:
  type: NodePort
  selector:
    app: devops-info-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
      nodePort: 30080
